@@ -28,6 +28,7 @@ donetickets.label               = Archived tickets
 tickets.label                   = Tickets
 filter.label                    = Filter
 filter.button                   = Filter
+erase_filter.button             = Erase filter
 filter_date.label               = Date (dd/mm/yyyy)
 filter_customer.label           = Customer
 filter_project.label            = Project
