@@ -28,6 +28,7 @@ donetickets.label               = Ticket archiviati
 tickets.label                   = Ticket
 filter.label                    = Filtro
 filter.button                   = Filtra
+erase_filter.button             = Azzera filtro
 filter_date.label               = Data (gg/mm/aaaa)
 filter_customer.label           = Azienda
 filter_project.label            = Progetto
