@@ -2,7 +2,8 @@
 ------------------
 NEW FEATURES:
 - Added "Ticket type" field. (Alex Pagnoni)
- 
+- Added "Erase filter" button. (Alex Pagnoni)
+
 CHANGES:
 - Layout improvements. (Alex Pagnoni)
 - Moved field types from Innowork Project to Innowork Tickets. (Alex Pagnoni)
